--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -4,7 +4,7 @@
       %p{class: "side-header__box__user-name" }masa
       %ul{class: "side-header__box__menu"}
         %li{class:"side-header__box__menu__new-group"}
-          %a{href:"#"}
+          = link_to '#', class:"side-header__box__btn" do
             = icon('fas', 'fas fa-edit')
             = icon('fas', 'fas fa-cog')
   .groups
