--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -82,10 +82,8 @@
       ul{
         color: #999999;
         font-size: 12px;
-        
-        
       }
-      a{
+      &__btn{
         cursor: pointer;
         text-decoration: none;
       }
@@ -147,10 +145,6 @@
       }
     }
 
-    
-    
-      
-
     form{
       height: 90px;
       background-color:#d2d2d2;
@@ -162,7 +156,6 @@
       .input-box{
         position: relative;
         width: 100%;
-
         &__holder{
           height: 50px;
           width: 100%;
@@ -170,8 +163,6 @@
           color: #434a54;
           border-style: none;
         }
-
-        
         &__image{
           font-size: 1.3rem;
           position: absolute;
@@ -184,8 +175,6 @@
            .file{
              display: none;
            }
-
-
         }
       }
       .send{
@@ -199,8 +188,6 @@
         cursor: pointer;
         display: flex;
         align-items: center;
-
-
       }
     }
   }
